--- a/src/main/resources/com/example/amplify/PlaylistScene.fxml
+++ b/src/main/resources/com/example/amplify/PlaylistScene.fxml
@@ -35,7 +35,7 @@
       <JFXButton fx:id="back" buttonType="RAISED" ellipsisString="" layoutX="16.0" layoutY="27.0" prefHeight="32.0" prefWidth="32.0" />
       <JFXListView fx:id="listView" layoutX="16.0" layoutY="120.0" prefHeight="334.0" prefWidth="467.0" />
       <JFXComboBox fx:id="playlists" layoutX="16.0" layoutY="79.0" prefHeight="32.0" prefWidth="229.0" />
-      <JFXButton fx:id="play" buttonType="RAISED" layoutX="255.0" layoutY="79.0" prefHeight="32.0" prefWidth="110.0" ripplerFill="#6b7dcc" text="Play">
+      <JFXButton fx:id="play" buttonType="RAISED" layoutX="255.0" layoutY="79.0" prefHeight="32.0" prefWidth="110.0" ripplerFill="#6b7dcc" text="Load">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -51,6 +51,11 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="info" buttonType="RAISED" ellipsisString="" layoutX="430.0" layoutY="27.0" prefHeight="32.0" prefWidth="32.0" />
+      <JFXButton fx:id="manage" buttonType="RAISED" ellipsisString="" layoutX="430.0" layoutY="27.0" prefHeight="32.0" prefWidth="32.0" />
+      <Label fx:id="maxLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="255.0" layoutY="33.0" prefHeight="17.0" prefWidth="41.0" style="-fx-text-fill: red;" text="max">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
