--- a/src/main/resources/com/example/amplify/PlaylistScene.fxml
+++ b/src/main/resources/com/example/amplify/PlaylistScene.fxml
@@ -35,20 +35,20 @@
       <JFXButton fx:id="back" buttonType="RAISED" ellipsisString="" layoutX="16.0" layoutY="27.0" prefHeight="32.0" prefWidth="32.0" />
       <JFXListView fx:id="listView" layoutX="16.0" layoutY="120.0" prefHeight="334.0" prefWidth="467.0" />
       <JFXComboBox fx:id="playlists" layoutX="16.0" layoutY="79.0" prefHeight="32.0" prefWidth="229.0" />
-      <JFXButton fx:id="load" buttonType="RAISED" layoutX="255.0" layoutY="79.0" prefHeight="32.0" prefWidth="110.0" ripplerFill="#6b7dcc" text="Load">
+      <JFXButton fx:id="load" buttonType="RAISED" layoutX="255.0" layoutY="79.0" prefHeight="32.0" prefWidth="110.0" ripplerFill="#6b7dcc" text="Load Playlist">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="Franklin Gothic Medium Italic" size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="add" buttonType="RAISED" layoutX="373.0" layoutY="79.0" prefHeight="32.0" prefWidth="110.0" ripplerFill="#6b7dcc" text="Add">
+      <JFXButton fx:id="add" buttonType="RAISED" layoutX="373.0" layoutY="79.0" prefHeight="32.0" prefWidth="110.0" ripplerFill="#6b7dcc" text="Add Songs">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="Franklin Gothic Medium Italic" size="14.0" />
          </font>
       </JFXButton>
       <TextField fx:id="input" layoutX="76.0" layoutY="30.0" prefHeight="32.0" prefWidth="223.0" promptText="Create playlist" />
       <JFXButton fx:id="create" buttonType="RAISED" layoutX="312.0" layoutY="30.0" prefHeight="32.0" prefWidth="110.0" ripplerFill="#6b7dcc" text="Create">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="Franklin Gothic Medium Italic" size="14.0" />
          </font>
       </JFXButton>
       <JFXButton fx:id="manage" buttonType="RAISED" ellipsisString="" layoutX="434.0" layoutY="27.0" prefHeight="32.0" prefWidth="32.0" />
