--- a/src/main/resources/com/example/amplify/LyricsScene.fxml
+++ b/src/main/resources/com/example/amplify/LyricsScene.fxml
@@ -54,6 +54,7 @@
             <JFXButton fx:id="change" buttonType="RAISED" layoutX="395.0" layoutY="10.0" prefHeight="24.0" prefWidth="24.0" />
             <JFXButton fx:id="remove" buttonType="RAISED" layoutX="434.0" layoutY="10.0" prefHeight="24.0" prefWidth="24.0" />
             <JFXButton fx:id="back" buttonType="RAISED" layoutX="5.0" layoutY="10.0" prefHeight="32.0" prefWidth="32.0" />
+            <JFXButton fx:id="seeLyrics" buttonType="RAISED" layoutX="353.0" layoutY="10.0" prefHeight="24.0" prefWidth="24.0" />
          </children>
       </AnchorPane>
    </children>
