--- a/src/main/resources/com/example/amplify/PlaylistScene-dark-theme.css
+++ b/src/main/resources/com/example/amplify/PlaylistScene-dark-theme.css
@@ -15,7 +15,7 @@
 
 #miniArtist {
     -fx-font-family: "Poppins";
-    -fx-font-size: 12px;
+    -fx-font-size: 16px;
 }
 
 #playlistSceneFXML {
@@ -65,4 +65,44 @@
 }
 .custom-cell {
     -fx-spacing: 10px;
+}
+.custom-button-for-change-album-art {
+    -fx-font-weight: bold;
+    -fx-font-size: 12px;
+    -fx-background-color: transparent;
+    -fx-border-color: black;
+    -fx-border-style: dashed;
+}
+.custom-button-for-change-album-art:hover {
+    -fx-cursor: hand;
+}
+.save {
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+    -fx-border-color: #9999ff;
+    -fx-font-weight: bold;
+    -fx-font-size: 18px;
+    -fx-background-color: #9999ff;
+    -fx-text-fill: white;
+}
+.save:hover {
+    -fx-border-color: blue;
+    -fx-background-color: blue;
+    -fx-text-fill: white;
+    -fx-cursor: hand;
+}
+.cancel {
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+    -fx-border-color: #ff9999;
+    -fx-font-weight: bold;
+    -fx-font-size: 18px;
+    -fx-background-color: #ff9999;
+    -fx-text-fill: white;
+}
+.cancel:hover {
+    -fx-border-color: #b30000;
+    -fx-background-color: #b30000;
+    -fx-text-fill: white;
+    -fx-cursor: hand;
 }
