--- a/src/main/resources/com/example/amplify/PlaylistScene.fxml
+++ b/src/main/resources/com/example/amplify/PlaylistScene.fxml
@@ -25,11 +25,7 @@
                   <Font name="Candara Bold" size="24.0" />
                </font>
             </Label>
-            <Label fx:id="miniArtist" layoutX="116.0" layoutY="62.0" prefHeight="17.0" prefWidth="212.0" text="Artist Name" textFill="WHITE">
-               <font>
-                  <Font name="Candara Bold" size="12.0" />
-               </font>
-            </Label>
+            <Label fx:id="miniArtist" layoutX="116.0" layoutY="62.0" prefHeight="25.0" prefWidth="223.0" text="Artist Name" textFill="WHITE" />
          </children>
       </AnchorPane>
       <JFXButton fx:id="back" buttonType="RAISED" ellipsisString="" layoutX="16.0" layoutY="27.0" prefHeight="32.0" prefWidth="32.0" />
