--- a/src/main/resources/com/example/amplify/PlaylistScene-dark-theme.css
+++ b/src/main/resources/com/example/amplify/PlaylistScene-dark-theme.css
@@ -106,3 +106,12 @@
     -fx-text-fill: white;
     -fx-cursor: hand;
 }
+
+#listView {
+    -fx-background-color: #f2f2f2;
+}
+#listView .list-cell:selected {
+    -fx-background: #85adad;
+    -fx-border-color: #334d4d;
+}
+
