--- a/src/main/resources/com/example/amplify/PlaylistScene-light-theme.css
+++ b/src/main/resources/com/example/amplify/PlaylistScene-light-theme.css
@@ -106,3 +106,10 @@
     -fx-text-fill: white;
     -fx-cursor: hand;
 }
+#listView {
+    -fx-background-color: #f2f2f2;
+}
+#listView .list-cell:selected {
+    -fx-background: #b3d9ff;
+    -fx-border-color: #004d4d;
+}
