--- a/src/main/resources/com/example/amplify/PlaylistScene-dark-theme.css
+++ b/src/main/resources/com/example/amplify/PlaylistScene-dark-theme.css
@@ -112,6 +112,6 @@
 }
 #listView .list-cell:selected {
     -fx-background: #85adad;
-    -fx-border-color: #334d4d;
+    -fx-border-color: #003333;
 }
 
